feat: ensure SignUpController returns 400 if name is not provided

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --pass-with-no-tests",
+    "test:staged": "jest --pass-with-no-tests"
   },
   "keywords": [],
   "author": "",
