--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "outDir": "./dist",
         "target": "ES2022",
         "esModuleInterop": true,
-        "allowJs": true
+        "allowJs": true,
+        "strictNullChecks": true
     },
     "exclude": [
         "node_modules"
